--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,9 +1,9 @@
 \section{Conclusão}
-Desta maneira, apesar de deterem diferentes desempenhos dependendo da ordenação da lista, os algoritmos em questão possuem um baixo proveito com listas muito grandes. Portanto, a fim de ordenar uma lista com maior rapidez, é aconselhável utilizar a função já implementada do Python, conhecida como timsort.
+Desta maneira, apesar de deterem diferentes desempenhos dependendo da ordenação do vetor, os algoritmos em questão possuem um baixo proveito com listas muito grandes. Portanto, a fim de ordenar uma lista com maior rapidez, é aconselhável utilizar a função já implementada do Python, conhecida como timsort.
 
 Adicionalmente, o algoritmo de contagem, ainda que o vetor passado tenha poucos elementos, pode ter um tempo de execução muito alto em razão da variação entre os números. Assim, é aconselhável a utilização do algoritmo em pauta apenas com listas com uma exígua variação.
 
-Em outra perspectiva, o bolha foi o algoritmo que apresentou o menor rendimento quando submetido as listas com diferentes tamanhos; o contagem, por outro lado, garantiu, apesar da faixa de valores maior, o melhor desempenho, principalmente nas listas com mais elementos. Dessa forma, a utilização do bolha é recomendada apenas para fins didáticos.
+Em outra perspectiva, o bolha foi o algoritmo que apresentou o menor rendimento quando submetido a sequências com diferentes tamanhos; o contagem, por outro lado, garantiu, apesar da faixa de valores maior, o melhor desempenho, principalmente nas listas com mais elementos. Dessa forma, a utilização do bolha é recomendada apenas para fins didáticos.
 
 
 Por fim, diante das comparações realizadas entre o Python e C, observa-se que, para algoritmos que dependem de malhas de repetição, a segunda linguagem apresenta um desempenho mais satisfatório.
